test: update tearDown methods for consistency and enhance security annotations